Include Boon’s thesis (Boon2013b).

--- a/doc/yade-theses.bib
+++ b/doc/yade-theses.bib
@@ -113,6 +113,14 @@
 	url = {https://yade-dem.org/publi/Catalano_Thesis.pdf}
 }
 
+@phdthesis{Boon2013b,
+	author = {C.W. Boon},
+	school = {University of Oxford},
+	title = {Distinct Element Modelling of Jointed Rock Masses: Algorithms and Their Verification},
+	year = {2013},
+	url = {http://www2.eng.ox.ac.uk/civil/publications/theses/boon-1}
+}
+
 @mastersthesis{GaeblerMedack2013,
 	author = {Gäbler, Nils and Medack, Jörg},
 	title = {Experimental and simulative study of particle dynamics on a chute},
