Include/Amend references: Houlsby2009, Boon2012, Boon2013, Boon2015.

--- a/doc/yade-articles.bib
+++ b/doc/yade-articles.bib
@@ -41,7 +41,6 @@ url={http://yade-dem.org/publi/AboulHosn_GRMA_2017.pdf}
   publisher={Elsevier}
 }
 
-
 @article{Bonilla2015,
 	year={2015},
 	journal={Acta Geotechnica},
@@ -53,47 +52,49 @@ url={http://yade-dem.org/publi/AboulHosn_GRMA_2017.pdf}
 	pages={1-15}
 }
 
-
-@article{Boon2012a,
+@ARTICLE{Boon2012,
+	author = {Boon, C.W. and Houlsby, G.T. and Utili, S.},
 	title = {A new algorithm for contact detection between convex polygonal and polyhedral particles in the discrete element method},
 	journal = {Computers and Geotechnics},
-	volume = {44},
-	number = {0},
-	pages = {73 - 82},
 	year = {2012},
+	volume = {44},
+	pages = {73-82},
 	doi = {10.1016/j.compgeo.2012.03.012},
 	url = {http://www.sciencedirect.com/science/article/pii/S0266352X12000535},
-	author = {Boon,C.W. and Houlsby, G.T. and Utili, S.}
 }
 
-@article{Boon2012b,
+@ARTICLE{Boon2013,
+	author = {Boon, C.W. and Houlsby, G.T. and Utili, S.},
 	title = {A new contact detection algorithm for three-dimensional non-spherical particles},
 	journal = {Powder Technology},
 	year = {2013},
+	volume = {248},
+	pages = {94-102},
 	doi = {10.1016/j.powtec.2012.12.040},
 	url = {http://www.sciencedirect.com/science/article/pii/S003259101200839X},
-	author = {Boon,C.W. and Houlsby, G.T. and Utili, S.}
 }
 
-@article{Boon2014,
-  title={New insights into the 1963 Vajont slide using 2D and 3D distinct-element method analyses},
-  journal={Géotechnique},
-  author={Boon, C.W. and Houlsby, G.T. and Utili, S.},
-  year={2014},
-  volume={64},
-  number={10},
-  pages={800--816},
-  publisher={Thomas Telford}
+@ARTICLE{Boon2014,
+	author = {Boon, C.W. and Houlsby, G.T. and Utili, S.},
+	title = {New insights into the 1963 Vajont slide using 2D and 3D distinct-element method analyses},
+	journal = {Géotechnique},
+	year = {2014},
+	volume = {64},
+	number = {10},
+	pages = {800-816},
+	doi = {10.1680/geot.14.P.041},
+	url = {https://www.icevirtuallibrary.com/doi/10.1680/geot.14.P.041},
 }
 
-@article{Boon2015,
-  title={A new rock slicing method based on linear programming},
-  author={Boon, C.W. and Houlsby, G.T. and Utili, S.},
-  journal={Computers and Geotechnics},
-  volume={65},
-  pages={12--29},
-  year={2015},
-  publisher={Elsevier}
+@ARTICLE{Boon2015,
+	author = {Boon, C.W. and Houlsby, G.T. and Utili, S.},
+	title = {A new rock slicing method based on linear programming},
+	journal = {Computers and Geotechnics},
+	year = {2015},
+	volume = {65},
+	pages = {12-29},
+	doi = {10.1016/j.compgeo.2014.11.007},
+	url = {https://www.sciencedirect.com/science/article/pii/S0266352X14002122},
 }
 
 @article{Bourrier2015,
@@ -596,6 +597,19 @@ author = "Markus Gusenbauer and Thomas Schrefl",
 	publisher = {American Physical Society},
 	doi = {10.1103/PhysRevE.88.062203},
 	url = {http://link.aps.org/doi/10.1103/PhysRevE.88.062203}
+}
+
+@article{Houlsby2009,
+author = {G.T. Houlsby},
+title = {Potential particles: a method for modelling non-circular particles in DEM},
+journal = {Computers and Geotechnics},
+year = {2009},
+volume = {36},
+number = {6},
+pages = {953-959},
+issn = {0266-352X},
+doi = {10.1016/j.compgeo.2009.03.001},
+url = {http://www.sciencedirect.com/science/article/pii/S0266352X09000469},
 }
 
 @article{Jasik2018,
