a number of sphinx warnings and bib references fixed

--- a/doc/yade-conferences.bib
+++ b/doc/yade-conferences.bib
@@ -497,7 +497,7 @@
 	month={May}
 }
 
-@incollection{Tran2012b,
+@incollection{Tran2012d,
 	title={A Discrete Element Study of the Earth Pressure Distribution on Cylindrical Shafts},
 	author={Tran, V.D.H and Meguid, M.A and Chouinard, L.E},
 	booktitle={Tunnelling Association of Canada (TAC) Conference 2012, Montreal},
